<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/banner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_backdrop"
    android:visibility="gone">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/bannerIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:srcCompat="@drawable/ic_signal_wifi_off"
        app:tint="@color/colorPrimary" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/bannerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@id/bannerIcon"
        android:maxLines="2"
        android:text="@string/error_offline_mode"
        android:textAppearance="?textAppearanceBody2"
        app:firstBaselineToTopHeight="36dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bannerRetry"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bannerText"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/retry" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bannerSettings"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bannerText"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_toStartOf="@+id/bannerRetry"
        android:text="@string/turn_on_wifi" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/bannerRetry"
        android:background="?dividerVertical" />

</RelativeLayout>
